--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,17 @@
 {
   "featured": [
     {
+      "title": "Penn Athletics End of Year Awards 2018",
+      "author": "Web Dev: Ishaan Rao; Design: Julia Schorr",
+      "section": "Sports",
+      "date": "April 2018",
+      "description": "It's been a fantastic year for Penn Athletics to date. The school has brought in five team league championships &mdash; with two more potentially coming from women's lacrosse and baseball. Individuals from women's squash, cross country, fencing and more have dominated on the national stage. Decades-long title droughts have been broken; equally lengthy individual records have fallen.",
+      "sponsored": false,
+      "link": "http://projects.thedp.com/2018/04/sports-awards/",
+      "image": "https://snworksceo.imgix.net/dpn/f85e6d07-e779-4f95-a73e-3adb1afa76d8.sized-1000x1000.png",
+      "alt": "penn athletics awards 2018"
+    },
+    {
       "title": "Penn men's basketball returns to March Madness",
       "author": "Web Dev: Jamie Tomlinson, Alex Graves",
       "section": "Sports",
@@ -21,7 +32,9 @@
       "link": "http://projects.thedp.com/2018/03/penn-bracket/",
       "image": "https://snworksceo.imgix.net/dpn/1d409ca6-7157-406c-ad9a-8e5708ced700.sized-1000x1000.png",
       "alt": "penn bracket 2018"
-    },
+    }
+  ],
+  "articles": [
     {
       "title": "Can you predict who will go to the Ivy League tournament?",
       "author": "Web Dev: Daniel Salib, Jamie Tomlinson, Alex Graves",
@@ -32,9 +45,7 @@
       "link": "http://projects.thedp.com/2018/02/basketball-predictions/",
       "image": "https://snworksceo.imgix.net/dpn/e16545d9-3c0b-41ed-b8e9-69bedbf609cd.sized-1000x1000.png",
       "alt": "basketball predictions"
-    }
-  ],
-  "articles": [
+    },
     {
       "title": "Super Bowl LII",
       "author": "Web Dev: Ishaan Rao",
@@ -113,7 +124,7 @@
       "alt": "the job search"
     },
     {
-      "title": "Penn Athletics End of Year Awards",
+      "title": "Penn Athletics End of Year Awards 2017",
       "author": "Web Dev: Andrew Fischer, Alex Graves",
       "section": "Sports",
       "date": "April 2017",
