--- a/projects.json
+++ b/projects.json
@@ -5,7 +5,7 @@
       "author": "Web Dev: Ishaan Rao; Design: Julia Schorr",
       "section": "Sports",
       "date": "April 2018",
-      "description": "It's been a fantastic year for Penn Athletics to date. The school has brought in five team league championships &mdash; with two more potentially coming from women's lacrosse and baseball. Individuals from women's squash, cross country, fencing and more have dominated on the national stage. Decades-long title droughts have been broken; equally lengthy individual records have fallen.",
+      "description": "It's been yet another strong year for Penn Athletics to date. The school has brought in three team league championships &mdash; with at least one more likely coming from women's lacrosse. Individuals from football, women's squash, swimming and more have dominated on the national stage. Decades-long title droughts have been broken; equally lengthy individual records have fallen. But here's DP Sports' breakdown of the best of the best in all facets of Penn sports.",
       "sponsored": false,
       "link": "http://projects.thedp.com/2018/04/sports-awards/",
       "image": "https://snworksceo.imgix.net/dpn/f85e6d07-e779-4f95-a73e-3adb1afa76d8.sized-1000x1000.png",
