--- a/projects.json
+++ b/projects.json
@@ -7,7 +7,7 @@
       "date": "April 2018",
       "description": "It's been yet another strong year for Penn Athletics to date. The school has brought in three team league championships &mdash; with at least one more likely coming from women's lacrosse. Individuals from football, women's squash, swimming and more have dominated on the national stage. Decades-long title droughts have been broken; equally lengthy individual records have fallen. But here's DP Sports' breakdown of the best of the best in all facets of Penn sports.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2018/04/sports-awards/",
+      "link": "https://projects.thedp.com/2018/04/sports-awards/",
       "image": "https://snworksceo.imgix.net/dpn/f85e6d07-e779-4f95-a73e-3adb1afa76d8.sized-1000x1000.png",
       "alt": "penn athletics awards 2018"
     },
@@ -18,7 +18,7 @@
       "date": "March 2018",
       "description": "Penn men's basketball is competing in the NCAA Tournament for the first time in 11 years. Follow along with our coverage of the team's journey to Wichita.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2018/03/march-madness/",
+      "link": "https://projects.thedp.com/2018/03/march-madness/",
       "image": "https://snworksceo.imgix.net/dpn/f3888a25-bcb4-4679-9b17-037b7984053c.sized-1000x1000.png",
       "alt": "march madness 2018"
     },
@@ -29,7 +29,7 @@
       "date": "March 2018",
       "description": "Students can vote on their favorite Penn student groups in the DP's take on March Madness.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2018/03/penn-bracket/",
+      "link": "https://projects.thedp.com/2018/03/penn-bracket/",
       "image": "https://snworksceo.imgix.net/dpn/1d409ca6-7157-406c-ad9a-8e5708ced700.sized-1000x1000.png",
       "alt": "penn bracket 2018"
     }
@@ -42,7 +42,7 @@
       "date": "February 2018",
       "description": "With just two weekends left in the Ivy League basketball season, seeding for the Ivy Tournament is still up for grabs. Each game carries importance in deciding which teams will lock up a spot. Predict which team will win each game and this tool will tell you what four teams will be playing for an NCAA Tournament berth.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2018/02/basketball-predictions/",
+      "link": "https://projects.thedp.com/2018/02/basketball-predictions/",
       "image": "https://snworksceo.imgix.net/dpn/e16545d9-3c0b-41ed-b8e9-69bedbf609cd.sized-1000x1000.png",
       "alt": "basketball predictions"
     },
@@ -53,7 +53,7 @@
       "date": "February 2018",
       "description": "Complete coverage of how the Eagles vs. Patriots at Super Bowl LII affects Penn from The Daily Pennsylvanian, 34th Street Magazine, and Under the Button.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2018/02/super-bowl/",
+      "link": "https://projects.thedp.com/2018/02/super-bowl/",
       "image": "https://snworksceo.imgix.net/dpn/48b36eb9-af7f-4925-b7ef-242e6e9afb9f.sized-1000x1000.png",
       "alt": "super bowl lii"
     },
@@ -64,7 +64,7 @@
       "date": "December 2017",
       "description": "The Daily Pennsylvanian's review of the most important stories of 2017.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/12/year-in-review/",
+      "link": "https://projects.thedp.com/2017/12/year-in-review/",
       "image": "https://snworksceo.imgix.net/dpn/2f6feaa5-2769-4617-8891-6ab35e732a02.sized-1000x1000.jpg",
       "alt": "story of 2017"
     },
@@ -75,7 +75,7 @@
       "date": "November 2017",
       "description": "Enjoy an in-depth analysis of the biggest games, stars, and questions heading into Penn basketball's 2017-18 season with the Daily Pennsylvanian's Basketball Preview!",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/11/basketball-preview/",
+      "link": "https://projects.thedp.com/2017/11/basketball-preview/",
       "image": "https://snworksceo.imgix.net/dpn/2dcde16f-3ab1-4491-a1da-0e89d9d1b23e.sized-1000x1000.jpg",
       "alt": "basketball"
     },
@@ -86,7 +86,7 @@
       "date": "October 2017",
       "description": "Mental health is an intensely personal topic, shaped inexorably by the circumstances, preferences and lifestyle of an individual person. A conversation about mental health can take a variety of forms. What it cannot tolerate is silence.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/10/mental-health/",
+      "link": "https://projects.thedp.com/2017/10/mental-health/",
       "image": "https://snworksceo.imgix.net/dpn/0c1ec93d-5b23-4573-b9d7-7e1691a3b8fe.sized-1000x1000.png",
       "alt": "mental health"
     },
@@ -97,7 +97,7 @@
       "date": "October 2017",
       "description": "The Daily Pennsylvanian brings you everything you need to know about housing at Penn, from how luxury housing has changed to the $200 million project to renovate Hill and build NCH.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/10/housing-guide/",
+      "link": "https://projects.thedp.com/2017/10/housing-guide/",
       "image": "https://snworksceo.imgix.net/dpn/38881fe2-a22d-45d3-ae06-471456df1996.sized-1000x1000.png",
       "alt": "housing guide 2017"
     },
@@ -108,7 +108,7 @@
       "date": "September 2017",
       "description": "Over the course of three weeks, The Daily Pennsylvanian analyzed various aspects of mental health across the University: from the resources offered at Counseling and Psychological Services to the way administrators choose to communicate these student deaths.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/09/mental-health/",
+      "link": "https://projects.thedp.com/2017/09/mental-health/",
       "image": "https://snworksceo.imgix.net/dpn/cd64b61d-fe37-4b90-9b05-2428ca9dd004.sized-1000x1000.jpg",
       "alt": "student death"
     },
@@ -119,7 +119,7 @@
       "date": "April 2017",
       "description": "With students running around in suits to Huntsman Hall, coffee chats across campus and Career Service emails populated with prestigious company names, hunting for a job is a daily part of life at Penn. Over the course of a few months, the Enterprise team at The Daily Pennsylvanian has looked into the many aspects of the job search on campus. From students working in lucrative industries to those who return to Locust Walk to continue their work at Penn, here are their stories.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/04/jobs-after-graduation/",
+      "link": "https://projects.thedp.com/2017/04/jobs-after-graduation/",
       "image": "https://s3.amazonaws.com/media.dpn/59135_thejobsearchf.png",
       "alt": "the job search"
     },
@@ -130,7 +130,7 @@
       "date": "April 2017",
       "description": "The year has seen some incredible moments for the University — but which ones were best? Here are our year-end awards for the best athletes, coaches, upsets and more.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/04/sports-end-of-year-awards/",
+      "link": "https://projects.thedp.com/2017/04/sports-end-of-year-awards/",
       "image": "https://s3.amazonaws.com/media.dpn/59124_sportsawardsf.jpg",
       "alt": "penn athletics awards 2017"
     },
@@ -141,7 +141,7 @@
       "date": "April 2017",
       "description": "Yes, it's that time of year again: when the people of Penn dutifully cast their votes for the best eateries, shops and (yes) book stores on and around campus. See what you all voted to win our 20 Best of Penn categories.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/04/best-of-penn/",
+      "link": "https://projects.thedp.com/2017/04/best-of-penn/",
       "image": "https://s3.amazonaws.com/media.dpn/58764_bestofpennogjpgf.jpeg",
       "alt": "best of penn 2017"
     },
@@ -152,7 +152,7 @@
       "date": "April 2017",
       "description": "Presented by Under the Button, Penn Dictionary is your guide to Penn slang. Feel free to submit your own definition!",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/03/penn-dictionary/",
+      "link": "https://projects.thedp.com/2017/03/penn-dictionary/",
       "image": "https://s3.amazonaws.com/media.dpn/58550_pdf.png",
       "alt": "penn dictionary"
     },
@@ -163,7 +163,7 @@
       "date": "March 2017",
       "description": "Students can vote on their favorite Penn student groups in the DP's take on March Madness.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/03/penn-bracket/",
+      "link": "https://projects.thedp.com/2017/03/penn-bracket/",
       "image": "https://s3.amazonaws.com/media.dpn/57761_pennbracketogjpgf.jpeg",
       "alt": "penn bracket 2017"
     },
@@ -174,7 +174,7 @@
       "date": "February 2017",
       "description": "A roundup of some of our best Valentine's Day content of 2017. Whether you're looking for a date-night show, some funny cards or just want to read the love notes, we've got you covered.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/02/valentines/",
+      "link": "https://projects.thedp.com/2017/02/valentines/",
       "image": "https://s3.amazonaws.com/media.dpn/57158_lovenotesf.jpg",
       "alt": "valentine's day 2017"
     },
@@ -185,7 +185,7 @@
       "date": "January 2017",
       "description": "With data provided by Penn Student Registration & Financial Services (SRFS) and other resources, The Daily Pennsylvanian Online Graphics Department took a deeper look into financial aid at Penn. These comparisons, infographics and interactive maps provide a transparent look at how Penn’s policies compare with those of other Ivy League schools, how aid packages differ for students from across the country and around the world and how work study functions, to name a few.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2017/01/financial-aid/",
+      "link": "https://projects.thedp.com/2017/01/financial-aid/",
       "image": "https://s3.amazonaws.com/media.dpn/56319_financialaidogf.png",
       "alt": "financial aid"
     },
@@ -196,7 +196,7 @@
       "date": "December 2016",
       "description": "Catch up on the events at Penn and in Philly that shaped 2016 in the DP's annual Year in Review.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2016/12/year-in-review/",
+      "link": "https://projects.thedp.com/2016/12/year-in-review/",
       "image": "https://s3.amazonaws.com/media.dpn/55750_2016yir01f.png",
       "alt": "2016 in review"
     },
@@ -207,7 +207,7 @@
       "date": "December 2016",
       "description": "Use an interactive map to view and compare prices and locations of coffee shops on campus.",
       "sponsored": true,
-      "link": "http://projects.thedp.com/2016/11/coffee-on-campus/",
+      "link": "https://projects.thedp.com/2016/11/coffee-on-campus/",
       "image": "https://s3.amazonaws.com/media.dpn/56237_coffeeoncampusimgf.png",
       "alt": "coffee break"
     },
@@ -218,8 +218,8 @@
       "date": "November 2016",
       "description": "A preview of the 2016 basketball season.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2016/11/basketball-preview/",
-      "image": "http://media.dpn.s3.amazonaws.com/54828_ogimgbballsuppf.jpg",
+      "link": "https://projects.thedp.com/2016/11/basketball-preview/",
+      "image": "https://s3.amazonaws.com/media.dpn/54828_ogimgbballsuppf.jpg",
       "alt": "basketball 2016"
     },
     {
@@ -229,7 +229,7 @@
       "date": "November 2016",
       "description": "Your guide to the candidates, policies and logistics for Election Day on November 8.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2016/11/voters-guide/",
+      "link": "https://projects.thedp.com/2016/11/voters-guide/",
       "image": "https://s3.amazonaws.com/media.dpn/54667_50916_supertuesdayff.jpg",
       "alt": "voting guide"
     },
@@ -240,7 +240,7 @@
       "date": "September 2016",
       "description": "Learn all about housing at Penn in the DP's 2016 Housing Guide!",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2016/09/housing-guide/",
+      "link": "https://projects.thedp.com/2016/09/housing-guide/",
       "image": "https://s3.amazonaws.com/media.dpn/53728_housingguidefbf.png",
       "alt": "housing guide 2016"
     },
@@ -251,7 +251,7 @@
       "date": "April 2016",
       "description": "The Daily Pennsylvanian was able to gain access to all available Penn Course Review data, which contains an enormous number of student evaluations of their classes going back over a decade. Through data analysis, we've been able to address some of the most simple and complex questions students might wonder about their academics.",
       "sponsored": false,
-      "link": "http://projects.thedp.com/2016/04/PCR/",
+      "link": "https://projects.thedp.com/2016/04/PCR/",
       "image": "https://s3.amazonaws.com/media.dpn/56239_screen_shot_20170122_at_33810_pmf.png",
       "alt": "penn course review"
     }
