--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,17 @@
 {
   "featured": [
     {
+      "title": "Football Preview 2018",
+      "author": "Web Dev: Daniel Salib",
+      "section": "Sports",
+      "date": "September 2018",
+      "description": "Football season is back! Take a look at The Daily Pennsylvanian's Football Preview, where we go in-depth on the most important players, questions, and themes surrounding Penn football this season.",
+      "sponsored": false,
+      "link": "https://projects.thedp.com/2018/09/football-preview/",
+      "image": "https://snworksceo.imgix.net/dpn/e0d71a87-5576-4cff-8829-08a2b62235b2.sized-1000x1000.png",
+      "alt": "football preview 2018"
+    },
+    {
       "title": "Penn Athletics End of Year Awards 2018",
       "author": "Web Dev: Ishaan Rao; Design: Julia Schorr",
       "section": "Sports",
@@ -10,7 +21,9 @@
       "link": "https://projects.thedp.com/2018/04/sports-awards/",
       "image": "https://snworksceo.imgix.net/dpn/f85e6d07-e779-4f95-a73e-3adb1afa76d8.sized-1000x1000.png",
       "alt": "penn athletics awards 2018"
-    },
+    }
+  ],
+  "articles": [
     {
       "title": "Penn men's basketball returns to March Madness",
       "author": "Web Dev: Jamie Tomlinson, Alex Graves",
@@ -32,9 +45,7 @@
       "link": "https://projects.thedp.com/2018/03/penn-bracket/",
       "image": "https://snworksceo.imgix.net/dpn/1d409ca6-7157-406c-ad9a-8e5708ced700.sized-1000x1000.png",
       "alt": "penn bracket 2018"
-    }
-  ],
-  "articles": [
+    },
     {
       "title": "Can you predict who will go to the Ivy League tournament?",
       "author": "Web Dev: Daniel Salib, Jamie Tomlinson, Alex Graves",
