--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,17 @@
 {
   "featured": [
     {
+      "title": "Housing Guide 2018",
+      "author": "Web Dev: Jamie Tomlinson, Alex Graves, Daniel Salib, Ian Ong",
+      "section": "Guides",
+      "date": "October 2018",
+      "description": "It's that time of the year again. Whether you're a freshman thinking about moving off campus for the first time or a senior interested to learn how Penn's college house system will evolve after you leave, the 2018 Housing Guide is a resource designed for you.",
+      "sponsored": false,
+      "link": "https://projects.thedp.com/2018/10/housing-guide/",
+      "image": "https://snworksceo.imgix.net/dpn/2dc2809e-a35d-4d75-9855-89f4ad076d62.sized-1000x1000.png",
+      "alt": "housing guide 2018"
+    },
+    {
       "title": "Football Preview 2018",
       "author": "Web Dev: Daniel Salib",
       "section": "Sports",
@@ -10,7 +21,9 @@
       "link": "https://projects.thedp.com/2018/09/football-preview/",
       "image": "https://snworksceo.imgix.net/dpn/e0d71a87-5576-4cff-8829-08a2b62235b2.sized-1000x1000.png",
       "alt": "football preview 2018"
-    },
+    }
+  ],
+  "articles": [
     {
       "title": "Penn Athletics End of Year Awards 2018",
       "author": "Web Dev: Ishaan Rao; Design: Julia Schorr",
@@ -21,9 +34,7 @@
       "link": "https://projects.thedp.com/2018/04/sports-awards/",
       "image": "https://snworksceo.imgix.net/dpn/f85e6d07-e779-4f95-a73e-3adb1afa76d8.sized-1000x1000.png",
       "alt": "penn athletics awards 2018"
-    }
-  ],
-  "articles": [
+    },
     {
       "title": "Penn men's basketball returns to March Madness",
       "author": "Web Dev: Jamie Tomlinson, Alex Graves",
