--- a/projects.json
+++ b/projects.json
@@ -5,7 +5,7 @@
       "author": "Web Dev: Jamie Tomlinson, Daniel Salib, Liam Morrissy, Ian Ong",
       "section": "Guides",
       "date": "November 2018",
-      "description": "",
+      "description": "The 2016 presidential election ushered in a contentious period in U.S. politics that placed a Penn alumnus in the White House and that has divided our campus and our country. Two years later, much is at stake as the Penn community prepares to vote in what many experts call the most important midterm elections in our lifetimes. Here's what you need to know.",
       "sponsored": false,
       "link": "https://projects.thedp.com/2018/10/voters-guide/",
       "image": "https://snworksceo.imgix.net/dpn/1faeaaa3-fa0e-479c-af08-5abaaf46a735.sized-1000x1000.jpg",
