ads, google analytics, clean-up

--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,17 @@
 {
   "featured": [
     {
+      "title": "Basketball Preview 2018",
+      "author": "Web Dev: Jamie Tomlinson, Daniel Salib, Eric Zhang, Liam Morrissy",
+      "section": "Sports",
+      "date": "November 2018",
+      "description": "With schedule highlights, projected starters, player features, and coach profiles, the basketball supplement has everything fans need to know about Penn men’s and women’s basketball for the upcoming 2018-2019 season.",
+      "sponsored": false,
+      "link": "https://projects.thedp.com/2018/11/basketball-preview/",
+      "image": "https://snworksceo.imgix.net/dpn/db3bbb49-9e59-4a7b-a85d-41aaacbf0b96.sized-1000x1000.png",
+      "alt": "basketball preview 2018"
+    },
+    {
       "title": "Midterm Elections Guide 2018",
       "author": "Web Dev: Jamie Tomlinson, Daniel Salib, Liam Morrissy, Ian Ong",
       "section": "Guides",
@@ -10,7 +21,9 @@
       "link": "https://projects.thedp.com/2018/10/voters-guide/",
       "image": "https://snworksceo.imgix.net/dpn/1faeaaa3-fa0e-479c-af08-5abaaf46a735.sized-1000x1000.jpg",
       "alt": "midterm elections guide 2018"
-    },
+    }
+  ],
+  "articles": [
     {
       "title": "Housing Guide 2018",
       "author": "Web Dev: Jamie Tomlinson, Alex Graves, Daniel Salib, Ian Ong",
@@ -32,9 +45,7 @@
       "link": "https://projects.thedp.com/2018/09/football-preview/",
       "image": "https://snworksceo.imgix.net/dpn/e0d71a87-5576-4cff-8829-08a2b62235b2.sized-1000x1000.png",
       "alt": "football preview 2018"
-    }
-  ],
-  "articles": [
+    },
     {
       "title": "Penn Athletics End of Year Awards 2018",
       "author": "Web Dev: Ishaan Rao; Design: Julia Schorr",
@@ -110,7 +121,7 @@
       "sponsored": false,
       "link": "https://projects.thedp.com/2017/11/basketball-preview/",
       "image": "https://snworksceo.imgix.net/dpn/2dcde16f-3ab1-4491-a1da-0e89d9d1b23e.sized-1000x1000.jpg",
-      "alt": "basketball"
+      "alt": "basketball preview 2017"
     },
     {
       "title": "Our Campus. Our Mental Health.",
