broke author into multiple lines

--- a/projects.json
+++ b/projects.json
@@ -2,7 +2,7 @@
   "featured": [
     {
         "title": "Who will make it to the Ivy League Basketball Tournaments?",
-        "author": "Web Dev: Alex Graves, Emily Saperstein, Ian Ong, Liam Morrissy Design: Jess Tan, Gillian Diebold, Ian Ong, Allison Kim",
+        "author": "Web Dev: Alex Graves, Emily Saperstein, Ian Ong, Liam Morrissy\nDesign: Jess Tan, Gillian Diebold, Ian Ong, Allison Kim",
         "section": "Sports",
         "date": "February 2019",
         "description": "With just two weekends left in the Ivy League basketball seasons, seeding for the Ivy Tournaments are still up for grabs. Each game carries importance in deciding which teams will lock up a trip to Yale. Predict which team will win each game and this tool will tell you what four teams will be playing for NCAA Tournament berths.",
