--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,17 @@
 {
   "featured": [
     {
+      "title": "Housing Guide 2019",
+      "author": "Web Dev: Daniel Salib, Design: Jess Tan, Gillian Diebold",
+      "section": "Guides",
+      "date": "October 2019",
+      "description": "Your guide to living at Penn.",
+      "sponsored": false,
+      "link": "https://projects.thedp.com/2019/10/housing-guide",
+      "image": "https://s3.amazonaws.com/snwceomedia/dpn/db1557f6-0d25-470e-95f0-8d9482c08691.original.svg",
+      "alt": "Housing Guide 2019"
+    },
+    {
       "title": "Football Preview 2019 | DP Sports",
       "author": "Web Dev: Leah Wang, Daniel Salib",
       "section": "DP Sports",
@@ -22,28 +33,30 @@
           "image": "https://snworksceo.imgix.net/dpn/a329e177-2fdb-44af-a8fc-3d1a42de9526.sized-1000x1000.png",
           "alt": "End of the Year Awards | DP Sports"
         }
-    ,{
-          "title": "Penn Bracket 2019",
-          "author": "Web Dev: Leah Wang, Daniel Salib",
-          "section": "Penn Bracket",
-          "date": "March 2019",
-          "description": "Vote for your favorite student groups in the 2019 Penn Bracket!",
-          "sponsored": false,
-          "link": "https://projects.thedp.com/2019/03/penn-bracket",
-          "image": "https://s3.amazonaws.com/snwceomedia/dpn/96a87558-f06f-439e-befd-9e7c086a9e3b.sized-1000x1000.png",
-          "alt": "Penn Bracket 2019"
-        }
-    ,{
-        "title": "Who will make it to the Ivy League Basketball Tournaments?",
-        "author": "Web Dev: Alex Graves, Emily Saperstein, Ian Ong, Liam Morrissy, Daniel Salib; Design: Jess Tan, Gillian Diebold, Ian Ong, Allison Kim",
-        "section": "Sports",
-        "date": "February 2019",
-        "description": "With just two weekends left in the Ivy League basketball seasons, seeding for the Ivy Tournaments are still up for grabs. Each game carries importance in deciding which teams will lock up a trip to Yale. Predict which team will win each game and this tool will tell you what four teams will be playing for NCAA Tournament berths.",
-        "sponsored": false,
-        "link": "https://projects.thedp.com/2019/02/basketball-predictions/",
-        "image": "https://snworksceo.imgix.net/dpn/5a552a54-5fca-4d67-9a30-2e918d47c023.sized-1000x1000.png",
-        "alt": "Who will make it to the Ivy League Basketball Tournaments?"
-      },
+  ],
+  "articles": [
+    {
+      "title": "Penn Bracket 2019",
+      "author": "Web Dev: Leah Wang, Daniel Salib",
+      "section": "Penn Bracket",
+      "date": "March 2019",
+      "description": "Vote for your favorite student groups in the 2019 Penn Bracket!",
+      "sponsored": false,
+      "link": "https://projects.thedp.com/2019/03/penn-bracket",
+      "image": "https://s3.amazonaws.com/snwceomedia/dpn/96a87558-f06f-439e-befd-9e7c086a9e3b.sized-1000x1000.png",
+      "alt": "Penn Bracket 2019"
+    },
+    {
+      "title": "Who will make it to the Ivy League Basketball Tournaments?",
+      "author": "Web Dev: Alex Graves, Emily Saperstein, Ian Ong, Liam Morrissy, Daniel Salib; Design: Jess Tan, Gillian Diebold, Ian Ong, Allison Kim",
+      "section": "Sports",
+      "date": "February 2019",
+      "description": "With just two weekends left in the Ivy League basketball seasons, seeding for the Ivy Tournaments are still up for grabs. Each game carries importance in deciding which teams will lock up a trip to Yale. Predict which team will win each game and this tool will tell you what four teams will be playing for NCAA Tournament berths.",
+      "sponsored": false,
+      "link": "https://projects.thedp.com/2019/02/basketball-predictions/",
+      "image": "https://snworksceo.imgix.net/dpn/5a552a54-5fca-4d67-9a30-2e918d47c023.sized-1000x1000.png",
+      "alt": "Who will make it to the Ivy League Basketball Tournaments?"
+    },
     {
       "title": "2018: The Year in Review",
       "author": "Web Dev: Daniel Salib, Emily Saperstein, Ian Ong, Alex Graves",
@@ -54,9 +67,7 @@
       "link": "https://projects.thedp.com/2018/12/year-in-review/",
       "image": "https://snworksceo.imgix.net/dpn/2a396a4a-c282-4fda-a940-bf98afa70c5e.sized-1000x1000.png",
       "alt": "year in review 2018"
-    }
-  ],
-  "articles": [
+    },
     {
         "title": "Basketball Preview 2018",
         "author": "Web Dev: Jamie Tomlinson, Daniel Salib, Eric Zhang, Liam Morrissy",
