--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,17 @@
 {
   "featured": [
     {
+      "title": "Basketball Preview 2019 | DP Sports",
+      "author": "Web Dev: Daniel Salib, Design: Gillian Diebold",
+      "section": "DP Sports",
+      "date": "November 2019",
+      "description": "",
+      "sponsored": false,
+      "link": "https://projects.thedp.com/2019/11/basketball-preview",
+      "image": "https://snworksceo.imgix.net/dpn/afecbda9-5424-4ab6-8d5d-3cf7ff75db55.sized-1000x1000.png?",
+      "alt": "Basketball Preview | DP Sports"
+    },
+    {
       "title": "Housing Guide 2019",
       "author": "Web Dev: Daniel Salib, Design: Jess Tan, Gillian Diebold",
       "section": "Guides",
@@ -22,19 +33,18 @@
       "image": "https://snworksceo.imgix.net/dpn/416b287f-afbe-4961-916a-70ec2450387f.sized-1000x1000.png?",
       "alt": "End of the Year Awards | DP Sports"
     }
-    ,{
-          "title": "End of the Year Awards | DP Sports",
-          "author": "Web Dev: Danny Leiser, Daniel Salib",
-          "section": "DP Sports",
-          "date": "May 2019",
-          "description": "2018-19 has been yet another strong year for Penn Athletics. Four teams won conference championships — with even more possible before the end of the spring. Individuals from track, lacrosse, squash, and more dominated on the national stage. Decades-long title droughts have been broken; equally lengthy individual records have fallen. Here’s DP Sports’ breakdown of the best of the best in all aspects of Penn sports.",
-          "sponsored": false,
-          "link": "https://projects.thedp.com/2019/04/sports-awards",
-          "image": "https://snworksceo.imgix.net/dpn/a329e177-2fdb-44af-a8fc-3d1a42de9526.sized-1000x1000.png",
-          "alt": "End of the Year Awards | DP Sports"
-        }
   ],
-  "articles": [
+  "articles": [{
+      "title": "End of the Year Awards | DP Sports",
+      "author": "Web Dev: Danny Leiser, Daniel Salib",
+      "section": "DP Sports",
+      "date": "May 2019",
+      "description": "2018-19 has been yet another strong year for Penn Athletics. Four teams won conference championships — with even more possible before the end of the spring. Individuals from track, lacrosse, squash, and more dominated on the national stage. Decades-long title droughts have been broken; equally lengthy individual records have fallen. Here’s DP Sports’ breakdown of the best of the best in all aspects of Penn sports.",
+      "sponsored": false,
+      "link": "https://projects.thedp.com/2019/04/sports-awards",
+      "image": "https://snworksceo.imgix.net/dpn/a329e177-2fdb-44af-a8fc-3d1a42de9526.sized-1000x1000.png",
+      "alt": "End of the Year Awards | DP Sports"
+    },
     {
       "title": "Penn Bracket 2019",
       "author": "Web Dev: Leah Wang, Daniel Salib",
