done but waiting on final video

--- a/projects.json
+++ b/projects.json
@@ -5,7 +5,7 @@
       "author": "Web Dev: Daniel Salib, Design: Gillian Diebold",
       "section": "DP Sports",
       "date": "November 2019",
-      "description": "",
+      "description": "Basketball season is finally here. With Ivy previews, projected starters, player features, and coach profiles, the 2019 Basketball Preview has everything fans need to know about Penn men’s and women’s basketball for the upcoming season.",
       "sponsored": false,
       "link": "https://projects.thedp.com/2019/11/basketball-preview",
       "image": "https://snworksceo.imgix.net/dpn/afecbda9-5424-4ab6-8d5d-3cf7ff75db55.sized-1000x1000.png?",
