--- a/projects.json
+++ b/projects.json
@@ -1,6 +1,17 @@
 {
   "featured": [
     {
+      "title": "2019 Year in Review",
+      "author": "Web Dev: Jess Tan, Daniel Salib, Design: Jess Tan",
+      "section": "Year in Review",
+      "date": "December 2019",
+      "description": "2019 at Penn was a year to remember. This year saw Penn take center stage in national news, when former Penn men’s basketball coach Jerome Allen was ensnared in the college admissions scandal and when two former Penn professors launched their presidential campaigns. On campus, students challenged the administration on multiple fronts. Fossil Free Penn demanded climate action at a Board of Trustees meeting, students protested Penn Law professor Amy Wax’s controversial comments, and a petition postponed the renaming of Penn Law. Take a look back at this year’s most defining moments with The Daily Pennsylvanian’s Year in Review.",
+      "sponsored": false,
+      "link": "https://projects.thedp.com/2019/12/year-in-review/",
+      "image": "https://s3.amazonaws.com/snwceomedia/dpn/c9f5bdfc-5a9d-450e-9a90-4e8ad3b04186.sized-1000x1000.jpg",
+      "alt": "2019 Year in Review"
+    },
+    {
       "title": "Basketball Preview 2019 | DP Sports",
       "author": "Web Dev: Daniel Salib, Design: Gillian Diebold",
       "section": "DP Sports",
@@ -21,7 +32,9 @@
       "link": "https://projects.thedp.com/2019/10/housing-guide",
       "image": "https://s3.amazonaws.com/snwceomedia/dpn/db1557f6-0d25-470e-95f0-8d9482c08691.original.svg",
       "alt": "Housing Guide 2019"
-    },
+    }
+  ],
+  "articles": [
     {
       "title": "Football Preview 2019 | DP Sports",
       "author": "Web Dev: Leah Wang, Daniel Salib",
@@ -32,9 +45,8 @@
       "link": "https://projects.thedp.com/2019/09/football-preview",
       "image": "https://snworksceo.imgix.net/dpn/416b287f-afbe-4961-916a-70ec2450387f.sized-1000x1000.png?",
       "alt": "End of the Year Awards | DP Sports"
-    }
-  ],
-  "articles": [{
+    },
+    {
       "title": "End of the Year Awards | DP Sports",
       "author": "Web Dev: Danny Leiser, Daniel Salib",
       "section": "DP Sports",
