--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-publisher-tag": "^2.0.6",
     "react-helmet": "^6.0.0",
     "styled-components": "^5.1.0"
   },
