--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-google-analytics": "^2.3.2",
+    "gatsby-plugin-load-script": "^1.1.0",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-offline": "^3.2.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
@@ -16,6 +17,8 @@
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
     "gh-pages": "^3.1.0",
+    "install": "^0.13.0",
+    "npm": "^6.14.8",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dfp": "^0.18.0",
