improve mobile styles + fix scroll issue

--- a/src/content/projects.json
+++ b/src/content/projects.json
@@ -7,7 +7,7 @@
       "date": "August 2020",
       "description": "Your guide for navigating this unprecedented virtual school year",
       "sponsored": false,
-      "link": "https://projects.thedp.com/2020/welcome-back",
+      "link": "/2020/welcome-back",
       "image": "https://snworksceo.imgix.net/dpn/1fe2ce10-46fa-402e-a9f2-498cc011769b.sized-1000x1000.jpg",
       "alt": "welcome-back"
     },
