--- a/src/content/projects.json
+++ b/src/content/projects.json
@@ -29,7 +29,7 @@
       "date": "December 2019",
       "description": "2019 at Penn was a year to remember. This year saw Penn take center stage in national news, when former Penn men’s basketball coach Jerome Allen was ensnared in the college admissions scandal and when two former Penn professors launched their presidential campaigns. On campus, students challenged the administration on multiple fronts. Fossil Free Penn demanded climate action at a Board of Trustees meeting, students protested Penn Law professor Amy Wax’s controversial comments, and a petition postponed the renaming of Penn Law. Take a look back at this year’s most defining moments with The Daily Pennsylvanian’s Year in Review.",
       "sponsored": false,
-      "link": "/2019/12/year-in-review/",
+      "link": "https://dailypenn.github.io/old.projects.thedp.com/2019/12/year-in-review/",
       "image": "https://s3.amazonaws.com/snwceomedia/dpn/c9f5bdfc-5a9d-450e-9a90-4e8ad3b04186.sized-1000x1000.jpg",
       "alt": "2019 Year in Review"
     }
@@ -42,7 +42,7 @@
       "date": "November 2019",
       "description": "Basketball season is finally here. With Ivy previews, projected starters, player features, and coach profiles, the 2019 Basketball Preview has everything fans need to know about Penn men’s and women’s basketball for the upcoming season.",
       "sponsored": false,
-      "link": "/2019/11/basketball-preview",
+      "link": "https://dailypenn.github.io/old.projects.thedp.com/2019/11/basketball-preview",
       "image": "https://snworksceo.imgix.net/dpn/afecbda9-5424-4ab6-8d5d-3cf7ff75db55.sized-1000x1000.png?",
       "alt": "Basketball Preview | DP Sports"
     },
@@ -53,7 +53,7 @@
       "date": "October 2019",
       "description": "Your guide to living at Penn.",
       "sponsored": false,
-      "link": "/2019/10/housing-guide",
+      "link": "https://dailypenn.github.io/old.projects.thedp.com/2019/10/housing-guide",
       "image": "https://s3.amazonaws.com/snwceomedia/dpn/db1557f6-0d25-470e-95f0-8d9482c08691.original.svg",
       "alt": "Housing Guide 2019"
     },
@@ -64,7 +64,7 @@
       "date": "September 2019",
       "description": "Penn football opens the season at Delaware on Saturday. Take a look at our 2019 Football Preview, where we preview the season to come and highlight the key players, positional groups, and coaches to watch.",
       "sponsored": false,
-      "link": "/2019/09/football-preview",
+      "link": "https://dailypenn.github.io/old.projects.thedp.com/2019/09/football-preview",
       "image": "https://snworksceo.imgix.net/dpn/416b287f-afbe-4961-916a-70ec2450387f.sized-1000x1000.png?",
       "alt": "End of the Year Awards | DP Sports"
     },
@@ -75,7 +75,7 @@
       "date": "May 2019",
       "description": "2018-19 has been yet another strong year for Penn Athletics. Four teams won conference championships — with even more possible before the end of the spring. Individuals from track, lacrosse, squash, and more dominated on the national stage. Decades-long title droughts have been broken; equally lengthy individual records have fallen. Here’s DP Sports’ breakdown of the best of the best in all aspects of Penn sports.",
       "sponsored": false,
-      "link": "/2019/04/sports-awards",
+      "link": "https://dailypenn.github.io/old.projects.thedp.com/2019/04/sports-awards",
       "image": "https://snworksceo.imgix.net/dpn/a329e177-2fdb-44af-a8fc-3d1a42de9526.sized-1000x1000.png",
       "alt": "End of the Year Awards | DP Sports"
     },
@@ -86,7 +86,7 @@
       "date": "March 2019",
       "description": "Vote for your favorite student groups in the 2019 Penn Bracket!",
       "sponsored": false,
-      "link": "/2019/03/penn-bracket",
+      "link": "https://dailypenn.github.io/old.projects.thedp.com/2019/03/penn-bracket",
       "image": "https://s3.amazonaws.com/snwceomedia/dpn/96a87558-f06f-439e-befd-9e7c086a9e3b.sized-1000x1000.png",
       "alt": "Penn Bracket 2019"
     },
@@ -97,7 +97,7 @@
       "date": "February 2019",
       "description": "With just two weekends left in the Ivy League basketball seasons, seeding for the Ivy Tournaments are still up for grabs. Each game carries importance in deciding which teams will lock up a trip to Yale. Predict which team will win each game and this tool will tell you what four teams will be playing for NCAA Tournament berths.",
       "sponsored": false,
-      "link": "/2019/02/basketball-predictions/",
+      "link": "https://dailypenn.github.io/old.projects.thedp.com/2019/02/basketball-predictions/",
       "image": "https://snworksceo.imgix.net/dpn/5a552a54-5fca-4d67-9a30-2e918d47c023.sized-1000x1000.png",
       "alt": "Who will make it to the Ivy League Basketball Tournaments?"
     }
