--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.24.47",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-google-analytics": "^2.3.2",
     "gatsby-plugin-load-script": "^1.1.0",
@@ -24,9 +25,11 @@
     "npm": "^6.14.8",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.4.0",
     "react-dfp": "^0.18.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-multi-carousel": "^2.5.5",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
