--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.24.47",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-google-analytics": "^2.3.2",
     "gatsby-plugin-load-script": "^1.1.0",
@@ -13,12 +14,12 @@
     "gatsby-plugin-offline": "^3.2.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.4",
+    "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-json": "^2.4.11",
-    "gatsby-transformer-sharp": "^2.5.2",
+    "gatsby-transformer-sharp": "^2.5.19",
     "gh-pages": "^3.1.0",
     "install": "^0.13.0",
     "npm": "^6.14.8",
